syntax = "proto3";

package api;

import "google/api/annotations.proto";
import "internal.proto";

service TopUpService {
    rpc GetTopUpHistory(GetTopUpHistoryRequest) returns (GetTopUpHistoryResponse){
        option(google.api.http) = {
			get: "/api/top_up/history"
		};
    }
}

message GetTopUpHistoryRequest {
    int64 org_id = 1;
    int64 offset = 2;
    int64 limit = 3;
}

message TopUpHistory {
    string from = 1;
    string to = 2;
    double amount = 3;
    string created_at = 4;
}

message GetTopUpHistoryResponse {
    int64 count = 1;
    repeated TopUpHistory topup_history = 2;
    ProfileResponse user_profile = 3;
}